<!--~
  ~ Copyright (c) SkyBooking Co,. Ltd
  ~ SkyOwner
  ~ Created by Khunchheang on  18/1/2020.
  -->

<resources>
   <string name="app_name" translatable="false">Resources Module</string>

   <!--Dialog-->
   <string name="ok">OK</string>
   <string name="cancel">Cancel</string>
   <string name="retry">Retry</string>
   <string name="tab_to_retry">Tab to retry</string>
   <string name="yes">Yes</string>
   <string name="no">No</string>

   <!--Server message-->
   <!--Session expired-->
   <string name="session_expired">Session Expired</string>
   <string name="pls_log_in_again">Please log in again.</string>
   <!--Server problem-->
   <string name="cannot_connect">Cannot connect</string>
   <string name="pls_try_again">Please try again.</string>
   <!--Timeout-->
   <string name="connection_timeout">Connection timeout</string>
   <!--No network connection-->
   <string name="no_network_title">No network connection</string>
   <string name="pls_check_network">Please check your network connection!</string>

   <!--Loading dialog-->
   <string name="loading">Loading…</string>

   <!--No data message-->
   <string name="no_data">No data found</string>

   <!--Language dialog-->
   <string name="languages">Languages</string>
   <string name="khmer" translatable="false">ខ្មែរ</string>
   <string name="english" translatable="false">English</string>
   <string name="chinese" translatable="false">中文</string>
   <string name="japanese" translatable="false">日本語</string>
   <string name="korean" translatable="false">한국어</string>
   <string name="indonesian" translatable="false">Bahasa Indonesia</string>
   <string name="malaysian" translatable="false">Bahasa Malaysia</string>

   <!--General-->
   <string name="save">Save</string>

   <!--Country code dialog-->
   <string name="country_or_region">Country or region</string>
   <string name="search_country">Search country or region</string>
   <string name="country_not_found">Country or region not found</string>

   <!--Verify Code-->
   <string name="verify_code">Verify Code</string>
   <string name="enter_six_digit_tag">Enter the 6-digit code sent to : %s</string>
   <string name="submit">Submit</string>
   <string name="resend">Resend</string>
   <string name="dont_get_code">Don\'t get the code?</string>
   <string name="invalid_code">Invalid code</string>
   <string name="verify_fail">Incorrect verify code!</string>
   <string name="you_can_resend_in_tag">You can resend in %s</string>
   <string name="verify_code_send_success">Verify code sent successfully!</string>

   <!--Dialog image picker-->
   <string name="choose_an_action">Choose an Action</string>
   <string name="camera">Camera</string>
   <string name="gallery">Gallery</string>
   <string name="permissions_denied">Permissions denied</string>

   <!--Location picker dialog-->
   <string name="close">Close</string>
   <string name="done">Done</string>
   <string name="no_location_data_provided">No location data provided!</string>

   <!--Update version dialog-->
   <string name="new_update_title">New Update</string>
   <string name="new_update_available_msg">New version for update available. Please go to update.</string>

   <!--Gender dialog-->
   <string name="gender">Gender</string>
   <string name="male">Male</string>
   <string name="female">Female</string>
   <string name="unknown">Unknown</string>

</resources>
