<?xml version="1.0" encoding="utf-8"?>
<layout>

   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
         style="@style/generalTextStyle.WithPadding.BSDialogTitleStyle"
         android:text="@string/gender" />

      <TextView
         android:id="@+id/tvMale"
         style="@style/generalTextStyle.WithPadding.Clickable"
         android:layout_width="match_parent"
         android:drawableStart="@drawable/ic_male"
         android:text="@string/male" />

      <TextView
         android:id="@+id/tvFemale"
         style="@style/generalTextStyle.WithPadding.Clickable"
         android:layout_width="match_parent"
         android:drawableStart="@drawable/ic_female"
         android:text="@string/female" />

      <View style="@style/dividerNoMarginStyle" />

      <TextView
         android:id="@+id/tvCancel"
         style="@style/generalTextStyle.WithPadding.Clickable"
         android:layout_width="match_parent"
         android:gravity="center"
         android:text="@string/cancel" />

   </LinearLayout>

</layout>
