<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorWhite"
         android:elevation="0dp"
         android:stateListAnimator="@null"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:layout_constraintTop_toTopOf="parent">

         <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/languages" />

      </com.google.android.material.appbar.AppBarLayout>

      <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">

         <RadioGroup
            android:id="@+id/rgLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:minHeight="@dimen/min_height_match_parent"
            android:orientation="vertical">

            <RadioButton
               android:id="@+id/rbKhmer"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/selectableItemBackground"
               android:button="@null"
               android:checked="true"
               android:drawableStart="@drawable/img_khmer_flag"
               android:drawableEnd="@drawable/check_selector"
               android:drawablePadding="@dimen/padding_3x"
               android:padding="@dimen/padding_4x"
               android:text="@string/khmer"
               android:textSize="@dimen/text_x_normal" />

            <View
               style="@style/dividerWithMarginStyle"
               android:layout_width="match_parent" />

            <RadioButton
               android:id="@+id/rbEnglish"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/selectableItemBackground"
               android:button="@null"
               android:drawableStart="@drawable/img_english_flag"
               android:drawableEnd="@drawable/check_selector"
               android:drawablePadding="@dimen/padding_3x"
               android:gravity="center_vertical"
               android:padding="@dimen/padding_4x"
               android:text="@string/english"
               android:textSize="@dimen/text_x_normal" />

            <View
               style="@style/dividerWithMarginStyle"
               android:layout_width="match_parent" />

            <RadioButton
               android:id="@+id/rbChinese"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/selectableItemBackground"
               android:button="@null"
               android:drawableStart="@drawable/img_china_flag"
               android:drawableEnd="@drawable/check_selector"
               android:drawablePadding="@dimen/padding_3x"
               android:gravity="center_vertical"
               android:padding="@dimen/padding_4x"
               android:text="@string/chinese"
               android:textSize="@dimen/text_x_normal" />

            <View
               style="@style/dividerWithMarginStyle"
               android:layout_width="match_parent" />

            <RadioButton
               android:id="@+id/rbJapanese"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/selectableItemBackground"
               android:button="@null"
               android:drawableStart="@drawable/img_japan_flag"
               android:drawableEnd="@drawable/check_selector"
               android:drawablePadding="@dimen/padding_3x"
               android:gravity="center_vertical"
               android:padding="@dimen/padding_4x"
               android:text="@string/japanese"
               android:textSize="@dimen/text_x_normal" />

            <View
               style="@style/dividerWithMarginStyle"
               android:layout_width="match_parent" />

            <RadioButton
               android:id="@+id/rbKorean"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/selectableItemBackground"
               android:button="@null"
               android:drawableStart="@drawable/img_korea_flag"
               android:drawableEnd="@drawable/check_selector"
               android:drawablePadding="@dimen/padding_3x"
               android:gravity="center_vertical"
               android:padding="@dimen/padding_4x"
               android:text="@string/korean"
               android:textSize="@dimen/text_x_normal" />

            <View
               style="@style/dividerWithMarginStyle"
               android:layout_width="match_parent" />

            <RadioButton
               android:id="@+id/rbIndonesian"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/selectableItemBackground"
               android:button="@null"
               android:drawableStart="@drawable/img_indonesia_flag"
               android:drawableEnd="@drawable/check_selector"
               android:drawablePadding="@dimen/padding_3x"
               android:gravity="center_vertical"
               android:padding="@dimen/padding_4x"
               android:text="@string/indonesian"
               android:textSize="@dimen/text_x_normal" />

            <View
               style="@style/dividerWithMarginStyle"
               android:layout_width="match_parent" />

            <RadioButton
               android:id="@+id/rbMalaysian"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/selectableItemBackground"
               android:button="@null"
               android:drawableStart="@drawable/img_malaysia_flag"
               android:drawableEnd="@drawable/check_selector"
               android:drawablePadding="@dimen/padding_3x"
               android:gravity="center_vertical"
               android:padding="@dimen/padding_4x"
               android:text="@string/malaysian"
               android:textSize="@dimen/text_x_normal" />

            <View
               style="@style/dividerWithMarginStyle"
               android:layout_width="match_parent" />

         </RadioGroup>

      </androidx.core.widget.NestedScrollView>

   </LinearLayout>

</layout>